planar mirror/output.txt
In file included from main.cpp:1:0:
../gl_wrapper.h: In function ‘void render()’:
../gl_wrapper.h:262:17: error: ‘glm::mat4 Transformation::get_matrix()’ is inaccessible
       glm::mat4 get_matrix()
                 ^
main.cpp:26:104: error: within this context
     glUniformMatrix4fv(view_matrix_location,1,GL_TRUE, glm::value_ptr(transformation_camera.get_matrix()));
                                                                                                        ^
main.cpp:26:104: error: ‘Transformation’ is not an accessible base of ‘TransformationTRSCamera’
In file included from main.cpp:1:0:
../gl_wrapper.h: In function ‘void special_callback(int, int, int)’:
../gl_wrapper.h:331:12: error: ‘void TransformationTRS::add_translation(glm::vec3)’ is inaccessible
       void add_translation(glm::vec3 translation)
            ^
main.cpp:42:67: error: within this context
           transformation_camera.add_translation(glm::vec3(0,0.1,0));
                                                                   ^
main.cpp:42:67: error: ‘TransformationTRS’ is not an accessible base of ‘TransformationTRSCamera’
In file included from main.cpp:1:0:
../gl_wrapper.h:331:12: error: ‘void TransformationTRS::add_translation(glm::vec3)’ is inaccessible
       void add_translation(glm::vec3 translation)
            ^
main.cpp:46:68: error: within this context
           transformation_camera.add_translation(glm::vec3(0,-0.1,0));
                                                                    ^
main.cpp:46:68: error: ‘TransformationTRS’ is not an accessible base of ‘TransformationTRSCamera’
In file included from main.cpp:1:0:
../gl_wrapper.h:331:12: error: ‘void TransformationTRS::add_translation(glm::vec3)’ is inaccessible
       void add_translation(glm::vec3 translation)
            ^
main.cpp:50:67: error: within this context
           transformation_camera.add_translation(glm::vec3(0.1,0,0));
                                                                   ^
main.cpp:50:67: error: ‘TransformationTRS’ is not an accessible base of ‘TransformationTRSCamera’
In file included from main.cpp:1:0:
../gl_wrapper.h:331:12: error: ‘void TransformationTRS::add_translation(glm::vec3)’ is inaccessible
       void add_translation(glm::vec3 translation)
            ^
main.cpp:54:68: error: within this context
           transformation_camera.add_translation(glm::vec3(-0.1,0,0));
                                                                    ^
main.cpp:54:68: error: ‘TransformationTRS’ is not an accessible base of ‘TransformationTRSCamera’
In file included from main.cpp:1:0:
../gl_wrapper.h: In function ‘void key_callback(unsigned char, int, int)’:
../gl_wrapper.h:342:12: error: ‘void TransformationTRS::add_rotation(glm::vec3)’ is inaccessible
       void add_rotation(glm::vec3 rotation)
            ^
main.cpp:67:64: error: within this context
           transformation_camera.add_rotation(glm::vec3(0,0,0.1));
                                                                ^
main.cpp:67:64: error: ‘TransformationTRS’ is not an accessible base of ‘TransformationTRSCamera’
In file included from main.cpp:1:0:
../gl_wrapper.h:342:12: error: ‘void TransformationTRS::add_rotation(glm::vec3)’ is inaccessible
       void add_rotation(glm::vec3 rotation)
            ^
main.cpp:71:65: error: within this context
           transformation_camera.add_rotation(glm::vec3(0,0,-0.1));
                                                                 ^
main.cpp:71:65: error: ‘TransformationTRS’ is not an accessible base of ‘TransformationTRSCamera’
In file included from main.cpp:1:0:
../gl_wrapper.h:342:12: error: ‘void TransformationTRS::add_rotation(glm::vec3)’ is inaccessible
       void add_rotation(glm::vec3 rotation)
            ^
main.cpp:75:64: error: within this context
           transformation_camera.add_rotation(glm::vec3(0.1,0,0));
                                                                ^
main.cpp:75:64: error: ‘TransformationTRS’ is not an accessible base of ‘TransformationTRSCamera’
In file included from main.cpp:1:0:
../gl_wrapper.h:342:12: error: ‘void TransformationTRS::add_rotation(glm::vec3)’ is inaccessible
       void add_rotation(glm::vec3 rotation)
            ^
main.cpp:79:65: error: within this context
           transformation_camera.add_rotation(glm::vec3(-0.1,0,0));
                                                                 ^
main.cpp:79:65: error: ‘TransformationTRS’ is not an accessible base of ‘TransformationTRSCamera’
In file included from main.cpp:1:0:
../gl_wrapper.h:342:12: error: ‘void TransformationTRS::add_rotation(glm::vec3)’ is inaccessible
       void add_rotation(glm::vec3 rotation)
            ^
main.cpp:83:64: error: within this context
           transformation_camera.add_rotation(glm::vec3(0,0.1,0));
                                                                ^
main.cpp:83:64: error: ‘TransformationTRS’ is not an accessible base of ‘TransformationTRSCamera’
In file included from main.cpp:1:0:
../gl_wrapper.h:342:12: error: ‘void TransformationTRS::add_rotation(glm::vec3)’ is inaccessible
       void add_rotation(glm::vec3 rotation)
            ^
main.cpp:87:65: error: within this context
           transformation_camera.add_rotation(glm::vec3(0,-0.1,0));
                                                                 ^
main.cpp:87:65: error: ‘TransformationTRS’ is not an accessible base of ‘TransformationTRSCamera’
In file included from main.cpp:1:0:
../gl_wrapper.h:331:12: error: ‘void TransformationTRS::add_translation(glm::vec3)’ is inaccessible
       void add_translation(glm::vec3 translation)
            ^
main.cpp:91:71: error: within this context
           transformation_camera.add_translation(glm::vec3(0.0,0.0,0.1));
                                                                       ^
main.cpp:91:71: error: ‘TransformationTRS’ is not an accessible base of ‘TransformationTRSCamera’
In file included from main.cpp:1:0:
../gl_wrapper.h:331:12: error: ‘void TransformationTRS::add_translation(glm::vec3)’ is inaccessible
       void add_translation(glm::vec3 translation)
            ^
main.cpp:95:72: error: within this context
           transformation_camera.add_translation(glm::vec3(0.0,0.0,-0.1));
                                                                        ^
main.cpp:95:72: error: ‘TransformationTRS’ is not an accessible base of ‘TransformationTRSCamera’
make: *** [all] Error 1
